--- a/about.html
+++ b/about.html
@@ -36,13 +36,13 @@
 <div class="navbar left-bar dox-bar">
 	
 <h1 class="logo">	
-    <a href="http://decorator.codable.org/" class="brand"><img src="img/logo.png" /></a>
+    <a href="index.html" class="brand"><img src="img/logo.png" /></a>
 </h1>
 
 <ul class="left">
-	<li><a href="http://decorator.codable.org/">Blocks</a></li>
-	<li><a href="http://decorator.codable.org/getit">Getting Started</a></li>
-	<li  class="active"><a href="http://decorator.codable.org/about">About</a></li>
+	<li><a href="index.html">Blocks</a></li>
+	<li><a href="getit.html">Getting Started</a></li>
+	<li  class="active"><a href="about.html">About</a></li>
 </ul>
 
 <ul class="list list-inline social">
@@ -69,27 +69,27 @@
 	
 <ul class="filter-bottom dox-filter-bottom">
 	    		
-		<li class="first noper"><a href="http://decorator.codable.org/">Blocks</a></li>
+		<li class="first noper"><a href="index.html">Blocks</a></li>
 	
-		<li class="noper"><a href="http://decorator.codable.org/forms">Forms</a></li>
+		<li class="noper"><a href="forms.html">Forms</a></li>
 	
-		<li class="noper"><a href="http://decorator.codable.org/tables">Tables</a></li>
+		<li class="noper"><a href="tables.html">Tables</a></li>
 	
-		<li class="noper"><a href="http://decorator.codable.org/lists">Lists</a></li>
+		<li class="noper"><a href="lists.html">Lists</a></li>
 
-		<li class="noper"><a href="http://decorator.codable.org/uikits">UI Kits</a></li>
+		<li class="noper"><a href="uikits.html">UI Kits</a></li>
 	
-		<li class="noper"><a href="http://decorator.codable.org/sprites">Sprites</a></li>
+		<li class="noper"><a href="sprites.html">Sprites</a></li>
 	
-		<li class="noper"><a href="http://decorator.codable.org/iconsttf">Icons</a><span class="warning">TTF</span></li>
+		<li class="noper"><a href="iconsttf.html">Icons</a><span class="warning">TTF</span></li>
 
-		<li class="noper"><a href="http://decorator.codable.org/javascript">Javascript</a></li>
+		<li class="noper"><a href="javascript.html">Javascript</a></li>
 
-		<li class="noper"><a href="http://decorator.codable.org/layouts">Layouts</a></li>
+		<li class="noper"><a href="layouts.html">Layouts</a></li>
 
-		<li class="noper"><a href="http://decorator.codable.org/gallery">Gallery</a></li>
+		<li class="noper"><a href="gallery.html">Gallery</a></li>
 
-		<li class="noper"><a href="http://decorator.codable.org/angular">Angular.js</a></li>
+		<li class="noper"><a href="angular.html">Angular.js</a></li>
 	    
 </ul>
 
